force-app/main/default/objects/Medical_Note__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Authored Medical Notes</relationshipLabel>
    <relationshipName>Authored_Medical_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>