force-app/main/default/objects/Medical_Note__c/fields/Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Date__c</fullName>
    <label>Note Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>