force-app/main/default/objects/Medical_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress Note</fullName>
            </value>
            <value>
                <fullName>Consultation Note</fullName>
            </value>
            <value>
                <fullName>Discharge Summary</fullName>
            </value>
            <value>
                <fullName>History and Physical</fullName>
            </value>
            <value>
                <fullName>Procedure Note</fullName>
            </value>
            <value>
                <fullName>Lab Results</fullName>
            </value>
            <value>
                <fullName>Imaging Results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>